--- a/SECOND QUARTERLY ASSESSMENT/MainWindow.xaml
+++ b/SECOND QUARTERLY ASSESSMENT/MainWindow.xaml
@@ -7,6 +7,16 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <DataGrid HorizontalAlignment="Left" Height="310" Margin="10,20,0,0" VerticalAlignment="Top" Width="631" RenderTransformOrigin="0.5,0.5" SelectionChanged="DataGrid_SelectionChanged">
+            <DataGrid.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0.308"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </DataGrid.RenderTransform>
+        </DataGrid>
+
     </Grid>
 </Window>
